--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
   </section>
 
-  <section class="design-section">
+  <section class="how-it-works">
     <div class="timeline">
 
       <!--Well, The reason for this div is to fill space. 
@@ -151,6 +151,27 @@
     </div>
     </div>
   </section>
+  <!-- Testimonials -->
+   <h1 class="testimonial-heading">Testimonials</h1>
+  <div class="testimonial-container">
+    <div class="testimonial active">
+      <img src="images/testimonial.jpg" alt="John Doe">
+      <p>"This product changed my life! Highly recommended."</p>
+      <div class="author">- John Doe</div>
+    </div>
+    <div class="testimonial">
+      <img src="images/testimonial2.jpg" alt="Sarah Smith">
+      <p>"Amazing quality and great customer service!"</p>
+      <div class="author">- Sarah Smith</div>
+    </div>
+    <div class="testimonial">
+      <img src="images/testimonials3.jpg" alt="Michael Brown">
+      <p>"I can't believe how effective this is! 10/10."</p>
+      <div class="author">- Michael Brown</div>
+    </div>
+  </div>
+
+  <script src="main.js"></script>
 
 </body>
 
